fix glider track for too wide/tall images

--- a/www/public/css/styles.css
+++ b/www/public/css/styles.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.glider-track {
+	height: 100%;
+}
